add customer_name on trx
